[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Platform1.tscn" type="PackedScene" id=3]
[ext_resource path="res://ShipConstruction.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.85318, 177.802 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.27719, 16.6159 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 169.378, 342.248 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="Platform1" parent="." instance=ExtResource( 3 )]
position = Vector2( 84.757, 151.503 )

[node name="Platform2" parent="." instance=ExtResource( 3 )]
position = Vector2( 257.449, 227.785 )

[node name="Platform3" parent="." instance=ExtResource( 3 )]
position = Vector2( 428.023, 83.6976 )

[node name="ShipConstruction" parent="." instance=ExtResource( 4 )]
position = Vector2( 325, 285 )

[node name="DropzoneArea2D" type="Area2D" parent="."]
position = Vector2( 340, 178 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropzoneArea2D"]
shape = SubResource( 1 )

[node name="LandingArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingArea2D"]
position = Vector2( 340.118, 373.773 )
shape = SubResource( 2 )

[connection signal="body_entered" from="DropzoneArea2D" to="." method="_on_DropzoneArea2D_body_entered"]
[connection signal="area_entered" from="LandingArea2D" to="." method="_on_LandingArea2D_area_entered"]
[connection signal="body_entered" from="LandingArea2D" to="." method="_on_LandingArea2D_body_entered"]
